# fastapi-url-service

./: .pre-commit-config.yaml  .tool-versions  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
infra/: .gitignore
infra/resources/: db.tf  ecr.tf  lambda.tf  main.tf  s3.tf  variables.tf
server/: .env.sample  .flake8  .pdm.toml  pyproject.toml  settings.yml
server/src/: main.py
server/src/app/: auth.py  main.py  settings.py  utils.py
server/src/app/adapters/: repository.py  storage.py
server/src/app/domain/: entity.py  exceptions.py
server/src/app/routers/: files.py  users.py
server/src/app/services/: files.py  users.py
server/src/tests/: conftest.py  test_auth.py  test_utils.py
server/src/tests/adapters/: test_repository.py  test_storage.py
server/src/tests/domain/: factories.py  test_entity.py
server/src/tests/routers/: test_files.py  test_users.py
server/src/tests/services/: test_files.py  test_users.py
