[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
    "isort>=5.11.2",
    "flake8>=6.0.0",
    "mypy>=0.991",
    "pytest>=7.2.0",
    "moto>=4.0.11",
    "boto3-stubs[essential]>=1.26.31",
    "botocore-stubs>=1.29.31",
]

[project]
name = "url-service"
version = "0.1"
description = ""
authors = [
    {name = "Vitor Ramalho", email = "ramalhodevitor@gmail.com"},
]
dependencies = [
    "fastapi>=0.88.0",
    "uvicorn>=0.20.0",
    "boto3>=1.26.31",
    "httpx>=0.23.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.isort]
profile = "black"
line_length = 120
skip = ['venv']

[tool.black]
line-length = 120
target-version = ['py39']
include = '.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | \.direnv
    | \.svn
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | manage.py
    | snapshots
)/
'''

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = true
